update resources and probe images

--- a/bf20_mill/bf20_mill.qrc
+++ b/bf20_mill/bf20_mill.qrc
@@ -52,6 +52,7 @@
     <file>images/probe_basic_icon.png</file>
     <file>images/probe_cal_round_boss.png</file>
     <file>images/probe_cal_round_pocket.png</file>
+    <file>images/probe_cal_square_pocket.png</file>
     <file>images/probe_cal_square_boss.png</file>
     <file>images/boss_pocket_3d_image.png</file>
     <file>images/drill_dim.png</file>
