--- a/bf20_mill/bf20_mill.qss
+++ b/bf20_mill/bf20_mill.qss
@@ -374,10 +374,38 @@ QPushButton[G5xBtn] {
     font: 20pt "Bebas Kai";
 }
 
-/**********************************************************************
- *                               Probing                              *
- *********************************************************************/
+/*===========================================================================*/
+/*                             probe buttons                                 */
+/*===========================================================================*/
 
+SubCallButton {
+    border-color: black;
+    border-style: solid;
+    border-radius: 10px;
+    border-width: 2px;
+    background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
+                                     stop: 0 #eaeaea, stop: 1.0 #b8b8b8);
+}
+
+SubCallButton:disabled {
+    border-color: gray;
+}
+
+SubCallButton:hover {
+    background:  qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #CFCDCA, stop: 1.0 #5C5959);
+}
+
+SubCallButton:pressed {
+    background:  qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 rgba(85, 85, 238, 255), stop:0.544974 rgba(90, 91, 239, 255), stop:1 rgba(126, 135, 243, 255));
+}
+
+SubCallButton:checked[option="true"] {
+    background:  qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 rgba(85, 85, 238, 255), stop:0.544974 rgba(90, 91, 239, 255), stop:1 rgba(126, 135, 243, 255));
+}
+
+SubCallButton:checked[option="false"] {
+    background:  qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 rgba(85, 85, 238, 255), stop:0.544974 rgba(90, 91, 239, 255), stop:1 rgba(126, 135, 243, 255));
+}
 
 
 /**********************************************************************
